# PersonalFinance

./: README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
src/: app.postcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs
src/routes/: +layout.svelte  +layout.ts  +page.svelte
